Fix collapse

--- a/homepage/static/homepage/css/styles.css
+++ b/homepage/static/homepage/css/styles.css
@@ -11,6 +11,7 @@ div.header {
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 0;
 }
 #logo {
     max-width: 100%;
